--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lr-http-server"
+    "start": "lr-http-server -w **/*.css,*.html"
   },
   "author": "",
   "license": "ISC",
