--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lr-http-server -w **/*.css,*.html"
+    "start": "lr-http-server -w **/*.css,*.html",
+    "serve": "http-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "http-server": "^0.10.0",
     "lr-http-server": "^0.1.5"
   },
   "dependencies": {}
